[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/snake_head.png" type="Texture" id=1]
[ext_resource path="res://assets/snake_head_open.png" type="Texture" id=2]
[ext_resource path="res://snake_head.gd" type="Script" id=3]
[ext_resource path="res://assets/press.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.5, 1.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 1.5 )

[node name="SnakeHead" type="Node2D"]
script = ExtResource( 3 )

[node name="SnakeHeadNormal" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 13, 10 )

[node name="SnakeHeadOpen" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="SoundClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Collider" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collider"]
shape = SubResource( 1 )

[node name="Nose" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Nose"]
position = Vector2( 4, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Collider" to="." method="_on_collider_area_entered"]
[connection signal="area_entered" from="Nose" to="." method="_on_nose_area_entered"]
[connection signal="area_exited" from="Nose" to="." method="_on_nose_area_exited"]
